Fix remaining compilation errors in Cloudhopper implementation (Part 3 - Final)
Fixed all remaining compilation issues:

1. SimFileManager method call (CloudhopperSimulator)
   - Changed getResourceAsStream() to getResolvedResourcePath()

2. Thread.getId() deprecation warnings (Java 21)
   - CloudhopperSimulator: Changed thread.getId() to thread.threadId()
   - CloudhopperAutoConfiguration: Changed thread.getId() to thread.threadId()

3. Implemented Simulator.getConnections() in CloudhopperSimulator
   - Added generic method returning Map<Integer, T> of connections
   - Properly casts SMPPConnectionConf to AbstractConnection

4. Fixed SMPPSimulator constructor in LogicaAutoConfiguration
   - Added required parameters: envConfig and messagesCache
   - Changed from new SMPPSimulator() to new SMPPSimulator(envConfig, messagesCache)

All compilation errors should now be resolved. Ready for build testing.